<resources>
    <string name="app_name">Dissertation</string>

    <string name="signup">SignUp / Register !!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signin">SignIn</string>
    <string name="title_activity_signup">SignUp</string>
    <string name="Welcome">Welcome</string>
    <string name="LoginHere">Login Here..</string>
    <string name="UserName">UserName ::</string>
    <string name="Password">Password  ::</string>
    <string name="dob">D O B       ::</string>
    <string name="firstname">First Name  ::</string>
    <string name="lastname">Last Name  ::</string>
    <string name="email">Email ID  ::</string>
    <string name="hospital">Hospital    ::</string>
    <string name="namedgp">Named GP  ::</string>
    <string name="resp">Respiratory Rate::</string>
    <string name="o2sat">Oxygen Saturation Level::</string>
    <string name="temperature">Body Temperature::</string>
    <string name="sysbp">Systolic Blood Pressure::</string>
    <string name="pulserate">Pulse Rate::</string>
    <string name="levelofconcious">Level Of Concious::</string>
    <string name="cal_bmi">Calculate BMI</string>
    <string name="cal_news">Calculate NEWS</string>
    <string name="bmi">BMI</string>
    <string name="cal_BMI">BMI CALCULATE</string>
    <string name="hint_hight">Height Here</string>
    <string name="hint_weight">Weight Here</string>
    <string name="txt_Height">HEIGHT:</string>
    <string name="txt_Weight">WEIGHT:</string>
    <string name="btn_learn">Learn</string>
    <string name="btn_emergency">Emergency</string>
    <string name="btn_appoint">Book An Appointment</string>
    <string name="btn_MOM">MoMS</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name = "btn_clear"> CLEAR </string>
    <string name="name">Fullname</string>
    <string name = "supp_o2"> Supplemental O2</string>



    <string-array name="hospitals_list">
        <item>Freeman</item>
        <item>RVI</item>
        <item>GLOBAL</item>
        <item>GH</item>
        <item>ST. NICHOLAS</item>
        <item>NORTH GATE</item>
        <item>ST. GEORGES</item>
        <item>WALKER GATE PARK</item>
    </string-array>

    <string-array name="St_Nicholas_Hospital">
        <item>St Nic Doc 1</item>
        <item>St Nic Doc 2</item>
        <item>St Nic Doc 3</item>
        <item>St Nic Doc 4</item>
        <item>St Nic Doc 5</item>
        <item>St Nic Doc 6</item>
        <item>St Nic Doc 7</item>
    </string-array>
    <string-array name="RVI_Hospital">
        <item>R V I Doc 1</item>
        <item>R V I Doc 2</item>
        <item>R V I Doc 3</item>
        <item>R V I Doc 4</item>
        <item>R V I Doc 5</item>
        <item>R V I Doc 6</item>
        <item>R V I Doc 7</item>
    </string-array>
    <string-array name="General_Hospital">
        <item>General Hos Doc 1</item>
        <item>General Hos Doc 2</item>
        <item>General Hos Doc 3</item>
        <item>General Hos Doc 4</item>
        <item>General Hos Doc 5</item>
        <item>General Hos Doc 6</item>
        <item>General Hos Doc 7</item>
    </string-array>
    <string-array name="St_Georges_Hospital">
        <item>St Georges Doc 1</item>
        <item>St Georges Doc 2</item>
        <item>St Georges Doc 3</item>
        <item>St Georges Doc 4</item>
        <item>St Georges Doc 5</item>
        <item>St Georges Doc 6</item>
        <item>St Georges Doc 7</item>
    </string-array>
    <string-array name="Nothgate_Hospital">
        <item>Northgate Doc 1</item>
        <item>Northgate Doc 2</item>
        <item>Northgate Doc 3</item>
        <item>Northgate Doc 4</item>
        <item>Northgate Doc 5</item>
        <item>Northgate Doc 6</item>
        <item>Northgate Doc 7</item>
    </string-array>
    <string-array name="supp_o2">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="alertness">
        <item>Awake</item>
        <item>Voice</item>
        <item>Pain</item>
        <item>Unresponsive</item>
    </string-array>
    <string-array name="weight_terms">
        <item>lb</item>
        <item>KG</item>
    </string-array>
    <string-array name="height_terms">
        <item>Inches</item>
        <item>Metres</item>
    </string-array>
    <string name="title_activity_calculate_bmi">CalculateBMI</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_calculate_news">CalculateNEWS</string>
    <string name="title_activity_home">Home</string>
    <string name="hint_email">Email</string>
    <string name="title_activity_learn">Learn</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="title_activity_moms">moms</string>
    <string name="title_activity_hospitals_list">Hospitals_list</string>
    <string name="title_activity_doctors_list">DoctorsList</string>
    <string name="title_activity_hospital__list">Hospital_List</string>
    <string name="title_activity_paired_devices">PairedDevices</string>
</resources>
