<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.prasannakc.dissertation.CalculateBMI">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvweight"
                android:text="@string/txt_Weight"
                android:textStyle="italic"
                android:textSize="19sp"
                android:textColor="#ff4b3dff" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etWeight"
                android:inputType="numberDecimal"
                android:hint="@string/hint_weight"
                android:layout_column="9" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spWeight"
                android:entries="@array/weight_terms"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHeight"
                android:text="@string/txt_Height"
                android:textStyle="italic"
                android:textSize="19sp"
                android:textColor="#ff4b3dff" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etHeight"
                android:inputType="numberDecimal"
                android:hint="@string/hint_hight"
                android:layout_column="9" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spHeight"
                android:entries="@array/height_terms"/>
        </TableRow>
    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="9"
            android:id="@+id/btn_calBMI"
            android:text="@string/cal_BMI"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBMI"
            android:text="@string/bmi"
            android:textSize="19sp"
            android:textStyle="italic"
            android:textColor="#ff4b3dff"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id= "@+id/etBMI"
            android:layout_column="9"
            android:inputType="number"/>
    </TableRow>

</TableLayout>

