<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#ff8bae9c"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.prasannakc.dissertation.CalculateNEWS"
    android:weightSum="1">

    <!--   Layout of the Screen  -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">
            <TableRow>
                <!--   Saturated Oxygen -->
                <TextView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/o2sat"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/o2sat"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:id="@+id/et_o2sat"
                    android:background="#ffcff8ff"/>
                <TextView  android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/percent"
                    android:textSize="18sp"
                    android:text="%"/>
            </TableRow>

            <!--   Pulse Rate -->
            <TableRow>
                <TextView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/pulse"
                    android:text="@string/pulserate"
                    android:textSize="20sp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:id="@+id/et_pulse"
                    android:background="#ffcff8ff"/>
                <TextView  android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/permin1"
                    android:textSize="18sp"
                    android:text="/M"/>
            </TableRow>

            <!-- Respiration per minute -->
            <TableRow>
                <TextView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/resp"
                    android:textSize="20sp"
                    android:text="@string/resp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:id="@+id/et_resp"
                    android:background="#ffcff8ff"/>
                <TextView  android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/permin"
                    android:textSize="18sp"
                    android:text="/M"/>
            </TableRow>

            <!--   Systolic Blood Pressure -->
            <TableRow>
                <TextView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sysbp"
                    android:textSize="20sp"
                    android:text="@string/sysbp"/>
                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/et_sysbp"
                    android:inputType="number"
                    android:background="#ffcff8ff"/>
            </TableRow>
            <!--   Body Temperature -->
            <TableRow>
                <TextView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp"
                    android:textSize="20sp"
                    android:text="@string/temperature"/>
                <EditText android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/et_temp"
                    android:background="#ffcff8ff"
                    android:inputType="numberDecimal"/>
            </TableRow>

            <!--  Patient Level of consciousness -->
            <TableRow>
                <TextView android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/level_of_con"
                    android:text="@string/levelofconcious"/>
                <Spinner
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:background="#ffcff8ff"
                    android:id="@+id/sp_level"
                    android:entries="@array/alertness" />
            </TableRow>
            <!-- Supplement Oxygen -->
            <TableRow>
                <TextView android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/supple_o2"
                    android:text="@string/supp_o2"/>
                <Spinner
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:background="#ffcff8ff"
                    android:id="@+id/sp_supp_o2"
                    android:entries="@array/supp_o2" />
            </TableRow>

            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cal_news"
                    android:text="@string/cal_news"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_clear"
                    android:text="@string/btn_clear"/>
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/score"
                android:text="SCORE"
                android:textSize="22sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_score"
                android:textSize="50sp"
                android:textStyle="bold"
                android:background="#ffcff8ff"/>
            </TableLayout>


    </LinearLayout>

</LinearLayout>
